[package]
name = "unity_template_packer"
version = "0.1.0"
authors = ["misabiko <misabiko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4.26"
flate2 = "1.0.13"
fs_extra = "1.1.0"
serde_json = "1.0.48"
serde_yaml = "0.8.11"
iced = "0.1.1"